--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Bulb Turn On or Off with JS</h1>
     <p>Using getElement</p>
 
+    <!-- add js -->
     <button onclick = 'document.getElementById("bulb").src="images/bulbon.gif"'>Turn ON</button>
     <img src = "images/bulboff.gif" id = "bulb" alt = "bulb">
     <button onclick = 'document.getElementById("bulb").src="images/bulboff.gif"'>Turn OFF</button>
